# GrayScaleImage

./: BatteryScreen.qml  CMakeLists.txt  CurtainDemo.qml  CurtainEffect.qml  DirectedParticles.qml  FirstShader.qml  FrenchFlag.qml  GenieEffect.qml  GradientText.qml  GridMeshTest.qml  JapaneseFlag.qml  Main.qml  ParticleParameters.qml  README.md  SimpleParticleSimulation.qml  TrailParticlePractice.qml  WaveEffect.qml  battery.frag  curtain.frag  curtain.vert  frenchFlag.frag  genie.vert  gridmesh.vert  japaneseFlag.frag  main.cpp  mask.frag  myWave.frag  myeffect.frag  redshader.frag  wave.frag
